made changes in the Project files

--- a/public/tracking.html
+++ b/public/tracking.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blood Pressure Tracking</title>
     <link rel="stylesheet" href="style.css">
-    <script src="home.html"></script>
+    <script src="index.html"></script>
     <script src="tracking.js"></script>
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -80,7 +80,7 @@
 <body>
     <div class="container bg-light">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-5 border-bottom" id="myHeader">
-            <a href="home.html"
+            <a href="index.html"
                 class="d-flex align-items-center mb-5 mb-md-0 me-md-auto text-dark text-decoration-none">
                 <i class="fa fa-home fa-2x"></i>
             </a>
@@ -89,7 +89,7 @@
                     <a class="nav-link active" href="tracking.html">BP Tracking</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="bmi.html">Body Mass Index</a>
+                    <a class="nav-link" href="bmi.html">Body Mass Index Calculator</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="community.html">Community Support</a>
