--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
 <body x-data="app">
     <div class="container bg-light">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-5 border-bottom" id="myHeader">
-            <a href="home.html"
+            <a href="index.html"
                 class="d-flex align-items-center mb-5 mb-md-0 me-md-auto text-dark text-decoration-none">
                 <i class="fa fa-home fa-2x"></i>
             </a>
@@ -123,7 +123,7 @@
                     <a class="nav-link" href="tracking.html">BP Tracking</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="bmi.html">Body Mass Index</a>
+                    <a class="nav-link" href="bmi.html">Body Mass Index Calculator</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="community.html">Community Support</a>
