--- a/public/profile.html
+++ b/public/profile.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile</title>
     <link rel="stylesheet" href="style.css">
+    <script src="index.html"></script>
+    <script src="tracking.js"></script>
+    <script src="index.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -64,7 +67,7 @@
                     <a class="nav-link" href="tracking.html">BP Tracking</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="bmi.html">Body Mass Index</a>
+                    <a class="nav-link" href="bmi.html">Body Mass Index Calculator</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="community.html">Community Support</a>
