--- a/public/signup.html
+++ b/public/signup.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile</title>
     <link rel="stylesheet" href="style.css">
+    <script src="login.html"></script>
+    <script src="login.js"></script>
+    <script src="index.html"></script>
+    <script src="tracking.js"></script>
+    <script src="index.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -60,7 +65,7 @@
 <body>
     <div class="container bg-light">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-5 border-bottom" id="myHeader">
-            <a href="home.html" class="d-flex align-items-center mb-5 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <a href="index.html" class="d-flex align-items-center mb-5 mb-md-0 me-md-auto text-dark text-decoration-none">
                 <i class="fa fa-home fa-2x"></i>
             </a>
             <ul class="nav nav-pills">
@@ -68,7 +73,7 @@
                     <a class="nav-link" href="tracking.html">BP Tracking</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="bmi.html">Body Mass Index</a>
+                    <a class="nav-link" href="bmi.html">Body Mass Index Calculator</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="community.html">Community Support</a>
@@ -91,44 +96,37 @@
         </header>
     </div>
     <section class="container w-50 profile content">
-
-
         <!-- User Profile Modal -->
         <div class="container">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title mb-4">Create New Profile</h5>
-
                     </div>
                     <div class="modal-body">
                         <!-- User Information Form -->
-                        <form id="myForm" autocomplete="off" action="signup.html" method="post">
+                        <form id="myForm" autocomplete="off">
                             <div class="mb-3">
                                 <label for="name" class="form-label">Full Name:</label>
                                 <input type="text" id="name" name="name" class="form-control" required>
                             </div>
-
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email:</label>
                                 <input type="email" id="email" name="email" class="form-control" required>
                             </div>
-
                             <div class="mb-3">
                                 <label for="contacts" class="form-label">Contact Information:</label>
                                 <input type="text" id="contacts" name="contacts" class="form-control" required>
                             </div>
-
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password:</label>
                                 <input type="password" id="password" name="password" class="form-control" required>
                             </div>
                             <div class="mb-3">
                                 <label for="confirm-password" class="form-label">Confirm Password:</label>
-                                <input type="password" id="confirm-password" name="confirm-password"
-                                    class="form-control" required>
+                                <input type="password" id="confirm-password" name="confirm-password" class="form-control" required>
                             </div>
-                            <div class="mt-5 bg-danger-subtle p-3 mb-5 " id="errorMessage" style="display: none;">
+                            <div class="mt-5 bg-danger-subtle p-3 mb-5" id="errorMessage" style="display: none;">
                                 <p class="text-danger" id="message"></p>
                             </div>
                             <button type="submit" class="btn btn-primary">Edit</button>
@@ -141,49 +139,36 @@
     </section>
 
     <script>
-        const Form = document.getElementById("myForm")
-        const err = document.getElementById("errorMessage")
-        const errMessage = document.getElementById("message")
+        const Form = document.getElementById("myForm");
+        const err = document.getElementById("errorMessage");
+        const errMessage = document.getElementById("message");
         Form.addEventListener("submit", async (event) => {
+            event.preventDefault(); // Prevent form submission for now
 
-
-            const name = document.getElementById("name").value
-            const email = document.getElementById("email").value
-            const contacts = document.getElementById("contacts").value
-            const password = document.getElementById("password").value
-            const confirmPass = document.getElementById("confirm-password").value
-
-
+            const name = document.getElementById("name").value;
+            const email = document.getElementById("email").value;
+            const contacts = document.getElementById("contacts").value;
+            const password = document.getElementById("password").value;
+            const confirmPass = document.getElementById("confirm-password").value;
 
             // Validate Password
             if (password !== confirmPass) {
-                err.style.display = "block"
-                errMessage.innerText = "Passwords do not match!"
+                err.style.display = "block";
+                errMessage.innerText = "Passwords do not match!";
                 setTimeout(() => {
-                    err.style.display = "none"
-
-                }, 4000)
-            }
-
-            else if (password.length < 4) {
-                err.style.display = "block"
-                errMessage.innerText = "Passwords too short!"
+                    err.style.display = "none";
+                }, 4000);
+            } else if (password.length < 4) {
+                err.style.display = "block";
+                errMessage.innerText = "Password too short!";
                 setTimeout(() => {
-                    err.style.display = "none"
-
-                }, 4000)
+                    err.style.display = "none";
+                }, 4000);
             }
-            // ..........
-
-
-
-            else {
-
-            }
-
-        })
-
+            // More validation if needed
+        });
     </script>
+
 </body>
 
 </html>
