Added a README file

--- a/public/blog.html
+++ b/public/blog.html
@@ -179,7 +179,7 @@
                     <img src="https://th.bing.com/th/id/R.f2f2c6865a38a4d6b5173d6fac51d782?rik=VyAasDfwFdfaDg&pid=ImgRaw&r=0"
                         style="width:100%">
                     <div class="w3-container w3-white">
-                        <h4><b>Hypertension Screening & Management Tool</b></h4>
+                        <h4><b>hypertension risk prediction and management application</b></h4>
                         <p>The best hypertension app you'll ever come across designed to empower you with the knowledge
                             and resources needed to take control of your blood pressure. Regular screenings are the
                             first step in identifying and managing hypertension. By using this tool, you can monitor
